Plot module now compiles. Refactoring is still to be done.