@@ -45,6 +45,14 @@
 					</compilerArgs>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.0.1</version>
+				<configuration>
+					<additionalOptions>--add-exports=javafx.controls/com.sun.javafx.charts=xaos.ui.plot</additionalOptions>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
